--- a/ms/references.bib
+++ b/ms/references.bib
@@ -53,6 +53,28 @@
   pages = {583--605},
 }
 
+@article{Calcagno-2006,
+  title = {Coexistence in a Metacommunity: The Competition\textendash{}colonization Trade-off Is Not Dead},
+  volume = {9},
+  shorttitle = {Coexistence in a Metacommunity},
+  number = {8},
+  journal = {Ecology Letters},
+  author = {Calcagno, Vincent and Mouquet, Nicolas and Jarne, Philippe and David, P.},
+  year = {2006},
+  pages = {897--907}
+}
+
+@article{Case-2005,
+  title = {The Community Context of Species' Borders: Ecological and Evolutionary Perspectives},
+  volume = {108},
+  shorttitle = {The Community Context of Species' Borders},
+  number = {1},
+  journal = {Oikos},
+  author = {Case, Ted J. and Holt, Robert D. and McPeek, Mark A. and Keitt, Timothy H.},
+  year = {2005},
+  pages = {28--46}
+}
+
 @Article{Charrier-2013,
   title = {Evaluation of the impact of frost resistances on potential altitudinal limit of trees},
   volume = {33},
@@ -147,14 +169,13 @@
   pages = {148 -- 164},
 }
 
-@Article{Falster-2015,
-  title = {Multi-trait eco-evolutionary dynamics explain niche diversity and
-  evolved neutrality in forests},
-  doi = {10.1101/014605},
-  journal = {bioRxiv},
-  author = {D S Falster and {\AA} Br\"annstr\"om and M Westoby and U Dieckmann},
-  year = {2015},
-  pages = {014605},
+
+@article{Falster-2017,
+  title = {Multitrait Successional Forest Dynamics Enable Diverse Competitive Coexistence},
+  journal = {Proceedings of the National Academy of Sciences},
+  author = {Falster, Daniel S. and Br{\"a}nnstr{\"o}m, $\backslash$AAke and Westoby, Mark and Dieckmann, Ulf},
+  year = {2017},
+  pages = {201610206}
 }
 
 @Article{Falster-2016,
@@ -282,6 +303,21 @@
   pages = {1--23},
 }
 
+
+@article{Koehler-2012,
+  title = {Evidence for a Freezing Tolerance-Growth Rate Trade-off in the Live Oaks ({{Quercus}} Series {{Virentes}}) across the Tropical-Temperate Divide},
+  volume = {193},
+  doi = {10.1111/j.1469-8137.2011.03992.x},
+  number = {3},
+  journal = {New Phytologist},
+  author = {Koehler, Kari and Center, Alyson and Cavender-Bares, Jeannine},
+  month = feb,
+  year = {2012},
+  pages = {730--744}
+}
+
+
+
 @Article{Kooyman-2010,
   title = {Plant functional traits in Australian subtropical rain forest : partitioning within-community from cross-landscape variation},
   volume = {98},
@@ -301,6 +337,18 @@
   year = {2012},
   pages = {1291--1299},
 }
+
+
+@article{Law-1997,
+  title = {On Evolution under Asymmetric Competition},
+  volume = {11},
+  number = {4},
+  journal = {Evolutionary Ecology},
+  author = {Law, R. and Marrow, P. and Dieckmann, U.},
+  year = {1997},
+  pages = {485--501}
+}
+
 
 @Article{Leimar-2008,
   title = {Evolution of phenotypic clusters through competition and local adaptation along an environmental gradient},
@@ -324,7 +372,6 @@
   pages = {3 -- 13}
 }
 
-
 @article{Lienard-2016,
   title = {An Individual-Based Forest Model Links Canopy Dynamics and Shade Tolerances along a Soil Moisture Gradient},
   volume = {3},
@@ -336,6 +383,32 @@
   year = {2016},
   pages = {150589}
 }
+
+@article{Loehle-1998,
+  title = {Height Growth Rate Tradeoffs Determine Northern and Southern Range Limits for Tree},
+  volume = {25},
+  journal = {Journal of Biogeography},
+  author = {Loehle, C},
+  year = {1998},
+  pages = {735--742}
+}
+
+
+@article{Lusk-2013,
+  title = {Correlates of Tree Species Sorting along a Temperature Gradient in {{New Zealand}} Rain Forests: Seedling Functional Traits, Growth and Shade Tolerance},
+  volume = {101},
+  shorttitle = {Correlates of Tree Species Sorting along a Temperature Gradient in {{New Zealand}} Rain Forests},
+  doi = {10.1111/1365-2745.12152},
+  number = {6},
+  journal = {Journal of Ecology},
+  author = {Lusk, Christopher H. and Kaneko, Teruko and Grierson, Ella and Clearwater, Michael},
+  editor = {Gilliam, Frank},
+  month = nov,
+  year = {2013},
+  pages = {1531--1541}
+}
+
+
 
 @Article{Maherali-2004,
   title = {Adaptive variation in the vulnerability of woody plants to xylem cavitation},
@@ -401,6 +474,22 @@
   pages = {1167–1180},
 }
 
+
+@article{Muller-Landau-2010,
+  title = {The Tolerance-Fecundity Trade-off and the Maintenance of Diversity in Seed Size.},
+  volume = {107},
+  doi = {10.1073/pnas.0911637107},
+  number = {9},
+  journal = {Proceedings of the National Academy of Sciences of the United States of America},
+  author = {Muller-Landau, Helene C},
+  month = mar,
+  year = {2010},
+  keywords = {Fertility,Plant Physiological Phenomena,Seeds,Species Specificity},
+  pages = {4242--7}
+}
+
+
+
 @Article{Niinemets-2001,
   title = {Global-scale climatic controls of leaf dry mass per area, density, and thickness in trees and shrubs},
   volume = {82},
@@ -410,6 +499,17 @@
   year = {2001},
   pages = {453--469},
 }
+
+@article{Niinemets-2006,
+  title = {Tolerance to Shade, Drought, and Waterlogging of Temperate {{Northern Hemisphere}} Trees and Shrubs},
+  volume = {76},
+  number = {4},
+  journal = {Ecological Monographs},
+  author = {Niinemets, {\"U}lo and Valladares, Fernando},
+  year = {2006},
+  pages = {521--547}
+}
+
 
 @Article{Onoda-2011,
   title = {Global patterns of leaf mechanical properties},
@@ -429,6 +529,16 @@
   author = {Jenny C. Ordo{\~n}ez and Peter M. van Bodegom and Jan-Philip M. Witte and Ian J. Wright and Peter B. Reich and Rien Aerts},
   year = {2009},
   pages = {137--149},
+}
+
+@article{Pacala-1998,
+  title = {Models Suggesting Field Experiments to Test Two Hypotheses Explaining Successional Diversity},
+  volume = {152},
+  number = {5},
+  journal = {The American Naturalist},
+  author = {Pacala, Stephen W. and Rees, Mark},
+  year = {1998},
+  pages = {729--737}
 }
 
 @article{Pfautsch-2016,
@@ -534,6 +644,16 @@
   pages = {13703--13708},
 }
 
+@article{Sack-2004,
+  title = {Responses of Temperate Woody Seedlings to Shade and Drought: Do Trade-Offs Limit Potential Niche Differentiation?},
+  volume = {107},
+  shorttitle = {Responses of Temperate Woody Seedlings to Shade and Drought},
+  number = {1},
+  journal = {Oikos},
+  author = {Sack, Lawren},
+  year = {2004},
+  pages = {110--127}
+}
 
 @article{Sakschewski-2015,
   title = {Leaf and stem economics spectra drive diversity of functional plant traits in a dynamic global vegetation model},
@@ -547,6 +667,16 @@
   pages = {2711--2725}
 }
 
+
+@article{Savage-2013,
+  title = {Phenological Cues Drive an Apparent Trade-off between Freezing Tolerance and Growth in the Family {{Salicaceae}}},
+  volume = {94},
+  number = {8},
+  journal = {Ecology},
+  author = {Savage, Jessica A. and Cavender-Bares, Jeannine},
+  year = {2013},
+  pages = {1708--1717}
+}
 
 @Article{Scheiter-2009,
   title = {Impacts of climate change on the vegetation of Africa: an adaptive dynamic vegetation modelling approach},
@@ -693,6 +823,21 @@
   year = {2005},
   pages = {411--421},
 }
+
+
+@article{Zanne-2010,
+  title = {Angiosperm Wood Structure: {{Global}} Patterns in Vessel Anatomy and Their Relation to Wood Density and Potential Conductivity},
+  volume = {97},
+  doi = {10.3732/ajb.0900178},
+  number = {2},
+  journal = {American Journal of Botany},
+  author = {Zanne, A E and Westoby, Mark and Falster, D. S. and Ackerly, David D. and Loarie, S. R. and Arnold, S. E. J. and a. Coomes, D.},
+  year = {2010},
+  pages = {207--215}
+}
+
+
+
 
 @Article{Zavala-2005,
   title = {A mechanistic model of tree competition and facilitation for Mediterranean forests: Scaling from leaf physiology to stand dynamics},
