--- a/ms/references.bib
+++ b/ms/references.bib
@@ -75,6 +75,22 @@
   pages = {28--46}
 }
 
+
+@article{Collatz-1991,
+  title = {Physiological and Environmental Regulation of Stomatal Conductance, Photosynthesis and Transpiration: A Model That Includes a Laminar Boundary Layer},
+  volume = {54},
+  doi = {10.1016/0168-1923(91)90002-8},
+  number = {2},
+  journal = {Agricultural and Forest Meteorology},
+  author = {Collatz, G.James and Ball, J.Timothy and Grivet, Cyril and Berry, Joseph A},
+  month = apr,
+  year = {1991},
+  pages = {107--136}
+}
+
+
+
+
 @Article{Charrier-2013,
   title = {Evaluation of the impact of frost resistances on potential altitudinal limit of trees},
   volume = {33},
@@ -585,6 +601,20 @@
   pages = {481--492},
 }
 
+
+@article{Haxeltine-1996,
+  title = {A {{General Model}} for the {{Light}}-{{Use Efficiency}} of {{Primary Production}}},
+  volume = {10},
+  doi = {10.2307/2390165},
+  number = {5},
+  journal = {Functional Ecology},
+  author = {Haxeltine, A. and Prentice, I. C.},
+  year = {1996},
+  pages = {551--561}
+}
+
+
+
 @Article{Prentice-2014,
   title = {Balancing the costs of carbon gain and water transport: testing a new theoretical framework for plant functional ecology},
   volume = {17},
@@ -763,6 +793,16 @@
   author = {Sterck, F. and Markesteijn, L. and Schieving, F. and Poorter, L.},
   year = {2011},
   pages = {20627--20632}
+}
+
+@article{Sitch-2003a,
+  title = {Evaluation of Ecosystem Dynamics, Plant Geography and Terrestrial Carbon Cycling in the {{LPJ}} Dynamic Global Vegetation Model},
+  volume = {9},
+  number = {2},
+  journal = {Global Change Biology},
+  author = {Sitch, S and Smith, B and Prentice, I C and Arneth, A and Bondeau, A and Cramer, W and Kaplan, J O and Levis, S and Lucht, W and Sykes, M T and Thonicke, K and Venevsky, S},
+  year = {2003},
+  pages = {161--185}
 }
 
 @Article{Swenson-2010,
